# etally-counter

./: README.md
arduino/eCounter/: eCounter.ino
c++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  transmit_demo
c++/socket.io_lib/: libboost_date_time.a.bak  libboost_random.a.bak
server/: ._temp.txt  package-lock.json  package.json  server2.js  shotStats.json  temp.txt
server/public/: index.html  layout.css
